src/objects/Linked_Documents__c.object
<CustomObject>
    <description>Used to link external documents from SharePoint or network drives</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Notes and Document Links</relationshipLabel>
        <relationshipName>Notes_and_Document_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Linked_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Notes and Document Links</relationshipLabel>
        <relationshipName>Notes_and_Document_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Link to Network drive Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Link to SharePoint Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_URL__c</fullName>
        <label>Document URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Document_Version__c</fullName>
        <defaultValue>&quot;1.0&quot;</defaultValue>
        <label>Document Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID for Reference</description>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <description>File or URL name</description>
        <label>File Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Notes and Document Links</relationshipLabel>
        <relationshipName>Notes_and_Document_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_in_Network_Drive__c</fullName>
        <label>Location in Network Drive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Notes and Document Links</relationshipLabel>
        <relationshipName>Notes_and_Document_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Section_Product_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Section Product Link</label>
        <referenceTo>Section_Product_Link__c</referenceTo>
        <relationshipLabel>Notes and Document Links</relationshipLabel>
        <relationshipName>Notes_and_Document_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Notes and Document Links</relationshipLabel>
        <relationshipName>Notes_and_Document_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Notes and Document Link</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notes and Document Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>